[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-network-common"
version = "0.1.0"
description = "Shared library for MCP network device servers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "scrapli[asyncssh]>=2024.1.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
